--- a/aluno/perfil/cartao_alimentacao.html
+++ b/aluno/perfil/cartao_alimentacao.html
@@ -4,5 +4,10 @@
     <div class="row perfil__cartao-vegetariano--radio">
       {{itens}}
     </div>
+    <div class="row">
+      <button type="submit" name="acao" id="acao" value="SalvarAlimentacao">
+        Salvar
+      </button>
+    </div>
   </div>
 </div>
