--- a/aluno/perfil/cartao_alt_senha.html
+++ b/aluno/perfil/cartao_alt_senha.html
@@ -1,7 +1,7 @@
 <div class="col s12">
   <div class="card hoverable perfil__cartao-alterar-senha">
     <h4 class="perfil__cartao-alterar-senha--titulo">Altere sua senha</h4>
-    <form name="alteraSenha" action="acao.php" method="post">
+    <form action="acao.php" method="post">
       <div class="row">
         <div class="col s12">
           <div class="input-field col s12">
