--- a/aluno/perfil/cartao_carne.html
+++ b/aluno/perfil/cartao_carne.html
@@ -1,8 +1,13 @@
-<div class="col s12 padding-card-small">
+<form class="col s12 padding-card-small">
   <div class="card hoverable perfil__cartao-carne">
     <h4 class="perfil__cartao-carne--titulo">Quais tipos de carne você come?</h4>
     <div class="row perfil__cartao-carne--checkbox">
       {{itens}}
     </div>
+    <div class="row">
+      <button type="submit" name="acao" id="acao" value="SalvarCarne">
+        Salvar
+      </button>
+    </div>
   </div>
-</div>
+</form>
