--- a/aluno/perfil/cartao_carne_item.html
+++ b/aluno/perfil/cartao_carne_item.html
@@ -1,7 +1,7 @@
 <div class="col s12 m6">
 	<label class="checkbox-vermelho">
     	<input type="checkbox" class="filled-in" 
-    	name="carnes" value="{codigo}" {checked} />
+    	name="carnes[]" value="{codigo}" {checked} />
         <span>{descricao}</span>
     </label>
 </div>
