--- a/aluno/perfil/cartao_frequencia.html
+++ b/aluno/perfil/cartao_frequencia.html
@@ -1,8 +1,13 @@
-<div class="col s12 padding-card-small">
+<form action="acao.php" method="post" class="col s12 padding-card-small">
   <div class="card hoverable perfil__cartao-almoca">
     <h4 class="perfil__cartao-almoca--titulo">Com que frequência você almoca no IFC?</h4>
     <div class="row perfil__cartao-almoca--radio">
       {{itens}}
     </div>
+    <div class="row">
+      <button type="submit" name="acao" id="acao" value="SalvarFrequencia">
+        Salvar
+      </button>
+    </div>
   </div>
-</div>
+</form>
