--- a/aluno/perfil/cartao_alt_senha.html
+++ b/aluno/perfil/cartao_alt_senha.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="col s12 center">
-          <button class="waves-effect waves-light btn"
+          <button class="waves-effect almocai btn"
           type="submit" name="acao" value="AlterarSenha">Alterar</button>
         </div>
     </form>
