--- a/aluno/perfil/cartao_frequencia.html
+++ b/aluno/perfil/cartao_frequencia.html
@@ -1,11 +1,12 @@
-<form action="acao.php" method="post" class="col s12 padding-card-small">
+<form class="col s12 padding-card-small" action="acao.php" method="post">
   <div class="card hoverable perfil__cartao-almoca">
     <h4 class="perfil__cartao-almoca--titulo">Com que frequência você almoca no IFC?</h4>
     <div class="row perfil__cartao-almoca--radio">
       {{itens}}
     </div>
-    <div class="row">
-      <button type="submit" name="acao" id="acao" value="SalvarFrequencia">
+    <div class="row center-align" style="margin-top: 1rem;">
+      <button class="almocai btn azul waves-effect"
+      type="submit" name="acao" id="acao" value="SalvarFrequencia">
         Salvar
       </button>
     </div>
