--- a/componentes/nav-funcionario.html
+++ b/componentes/nav-funcionario.html
@@ -7,11 +7,11 @@
         Página inicial
         <i class="material-icons right">home</i>
       </a></li>
-      <li><a class="waves-effect" href="cardapio/criar">
+      <li><a class="waves-effect" href="{root_path}funcionario/cardapio/criar">
         Criar cardápio
         <i class="material-icons right">menu_book</i>
       </a></li>
-      <li><a class="waves-effect" href="cardapio/gerenciar">
+      <li><a class="waves-effect" href="{root_path}funcionario/cardapio/gerenciar">
         Gerenciar cardápio
         <i class="material-icons right">menu_book</i>
       </a></li>
@@ -26,11 +26,11 @@
     Página inicial
     <i class="material-icons right">home</i>
   </a></li>
-  <li><a class="waves-effect" href="cardapio/criar">
+  <li><a class="waves-effect" href="{root_path}funcionario/cardapio/criar">
     Criar cardápio
     <i class="material-icons right">menu_book</i>
   </a></li>
-  <li><a class="waves-effect" href="cardapio/gerenciar">
+  <li><a class="waves-effect" href="{root_path}funcionario/cardapio/gerenciar">
     Gerenciar cardápio
     <i class="material-icons right">menu_book</i>
   </a></li>
