--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -1,12 +1,11 @@
 <div class="col s12 padding-card-small">
   <div class="card hoverable perfil__cartao-intolerancia">
-    <h4 class="perfil__cartao-intolerancia--titulo">Você possui alguma intolerância/alergia alimentar?</h4>
+    <h4 class="perfil__cartao-intolerancia--titulo">
+      Você possui alguma intolerância/alergia alimentar?
+    </h4>
     <div class="row">
       <div class="col s12">
-        <div class="input-field">
-          <input type="text" id="intolerancia-alimentar" placeholder="Ex: Lactose" class="autocomplete">
-          <label for="intolerancia-alimentar">Intolerância alimentar</label>
-        </div>
+        <div class="input-field"></div>
       </div>
     </div>
   </div>
