Alteração de senha + formatação do código
# usuário pode alterar a própria senha
# sistema retorna caso senha antiga esteja incorreta
# administrador pode alterar senha de usuário
# formatação: automática, extensao "prettier"

--- a/administrador/componentes/linha_usuario.html
+++ b/administrador/componentes/linha_usuario.html
@@ -19,6 +19,10 @@
             <input id="nome" name="nome" type="text" value="{nome}">
             <label for="nome">Nome</label>
           </div>
+          <div class="input-field col s12">
+            <input id="senha" name="senha" type="password" placeholder="Senha (deixe vazia para não alterar)">
+            <label for="senha">Senha</label>
+          </div>
         </div>
 
         <div class="modal-footer row">
