--- a/aluno/perfil/cartao_alt_senha.html
+++ b/aluno/perfil/cartao_alt_senha.html
@@ -21,5 +21,6 @@
           type="submit" name="acao" value="AlterarSenha">Alterar</button>
         </div>
     </form>
+    {{senha_antiga_incorreta}} 
   </div>
 </div>
