--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -5,7 +5,13 @@
     </h4>
     <div class="row">
       <div class="col s12">
-        <div class="input-field"></div>
+        <h5 class="center-align">
+          Entre em contato com a nutricionista do câmpus.
+        </h5>
+
+        <div class="divider" style="margin: 2rem 0 2rem 0"></div>
+
+        <!-- se aluno tiver intolerância cadastrada <h6>Suas intolerâncias:</h6> -->
       </div>
     </div>
   </div>
