Interface - Gerenciar Cardápio
Removido o diretório /nutricionista, e adicionado página de gerencamento de cardápio para funcionario.

--- a/Interface/funcionario/index.html
+++ b/Interface/funcionario/index.html
@@ -31,6 +31,8 @@
         <img class="no-select brand-logo" src="../assets/img/logo-branco.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
+          <li><a class="waves-effect active" href="./"><i class="material-icons left">home</i>Página Inicial</a></li> 
+          <li><a class="waves-effect" href="cardapio/gerenciar/"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
           <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
         </ul>
       </div>
@@ -38,6 +40,8 @@
 
     <ul class="sidenav" id="mobile-sidenav">
       <li class="sidenav__logo"><img src="../assets/img/logo-verde.svg"></li>
+      <li><a class="waves-effect active" href="./"><i class="material-icons left">home</i>Página Inicial</a></li> 
+      <li><a class="waves-effect" href="cardapio/gerenciar/"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
       <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </header>
