Interface - Gerenciar cardápio
Adicionado SELECT para os cartões de cardápio.

--- a/Interface/funcionario/cardapio/gerenciar/index.html
+++ b/Interface/funcionario/cardapio/gerenciar/index.html
@@ -104,6 +104,16 @@
               <input id="alimento" type="text">
               <label for="alimento">Alimento</label>
             </div>
+            <div class="input-field col s12">
+              <select>
+                <option value="" disabled selected>Escolha uma opção</option>
+                <option value="1">Normal</option>
+                <option value="2">Carne</option>
+                <option value="3">Vegetariano</option>
+                <option value="4">Vegano</option>
+              </select>
+              <label>Tipo do alimento</label>
+            </div>
             <div class="col s12 center">
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
             </div>
@@ -127,6 +137,16 @@
             <div class="input-field col s12">
               <input id="alimento" type="text">
               <label for="alimento">Alimento</label>
+            </div>
+            <div class="input-field col s12">
+              <select>
+                <option value="" disabled selected>Escolha uma opção</option>
+                <option value="1">Normal</option>
+                <option value="2">Carne</option>
+                <option value="3">Vegetariano</option>
+                <option value="4">Vegano</option>
+              </select>
+              <label>Tipo do alimento</label>
             </div>
             <div class="col s12 center">
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
@@ -152,6 +172,16 @@
               <input id="alimento" type="text">
               <label for="alimento">Alimento</label>
             </div>
+            <div class="input-field col s12">
+              <select>
+                <option value="" disabled selected>Escolha uma opção</option>
+                <option value="1">Normal</option>
+                <option value="2">Carne</option>
+                <option value="3">Vegetariano</option>
+                <option value="4">Vegano</option>
+              </select>
+              <label>Tipo do alimento</label>
+            </div>
             <div class="col s12 center">
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
             </div>
@@ -175,6 +205,16 @@
             <div class="input-field col s12">
               <input id="alimento" type="text">
               <label for="alimento">Alimento</label>
+            </div>
+            <div class="input-field col s12">
+              <select>
+                <option value="" disabled selected>Escolha uma opção</option>
+                <option value="1">Normal</option>
+                <option value="2">Carne</option>
+                <option value="3">Vegetariano</option>
+                <option value="4">Vegano</option>
+              </select>
+              <label>Tipo do alimento</label>
             </div>
             <div class="col s12 center">
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
