Integração interface - gerenciamento de cardápio + atualização assets

--- a/funcionario/cardapio/gerenciar/cardapio_indisponivel.html
+++ b/funcionario/cardapio/gerenciar/cardapio_indisponivel.html
@@ -1,3 +1,7 @@
-<div class="card-panel col s12 almocai vermelho center-align">
-  <h4 class="white-text">Cardápio indisponível</h4>
+<div class="section container">
+  <div class="row">
+    <div class="cardapio__indisponivel card col s12 m6 offset-m3">
+      <h2 class="no-select">Cardápio indisponível</h2>
+    </div>
+  </div>
 </div>
