--- a/funcionario/cardapio/gerenciar/select_tipo.html
+++ b/funcionario/cardapio/gerenciar/select_tipo.html
@@ -2,5 +2,6 @@
   <option value="NORMAL">Normal</option>
   <option value="CARNE">Carne</option>
   <option value="VEGETARIANA">Opção vegetariana</option>
-  <option value="VEGANA">Opção vegana</option>  
+  <option value="VEGANA">Opção vegana</option>
 </select>
+<span class="helper-text">Tipo de alimento</span>
