--- a/Interface/funcionario/cardapio/gerenciar/index.html
+++ b/Interface/funcionario/cardapio/gerenciar/index.html
@@ -32,7 +32,7 @@
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect" href="../../"><i class="material-icons left">home</i>Página Inicial</a></li> 
-          <li><a class="waves-effect active" href="cardapio/gerenciar/"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
+          <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
           <li><a class="waves-effect" href="../../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
         </ul>
       </div>
@@ -41,7 +41,7 @@
     <ul class="sidenav" id="mobile-sidenav">
       <li class="sidenav__logo"><img src="../../../assets/img/logo-verde.svg"></li>
       <li><a class="waves-effect" href="../../"><i class="material-icons left">home</i>Página Inicial</a></li> 
-      <li><a class="waves-effect active" href="cardapio/gerenciar/"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
+      <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
       <li><a class="waves-effect" href="../../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </header>
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col s12">
           <h1 class="banner__titulo">Gerenciar cardápio</h1>
-          <h4 class="banner__subtitulo">30/09 - 03/10</h4>
+          <h4 class="banner__subtitulo">30/09 até 03/10</h4>
         </div>
       </div>
     </div>
@@ -159,7 +159,7 @@
       <div class="col s12 m6 l3">
         <div class="funcionario__cardapio-add--card">
           <h3 class="funcionario__cardapio-add--card--title almocai-text text-amarelo">Quarta-Feira</h3>
-          <h5 class="funcionario__cardapio-add--card--data">01/10</h5>
+          <h5 class="funcionario__cardapio-add--card--data">02/10</h5>
           <ul class="funcionario__cardapio-add--lista">
             <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
             <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
@@ -193,7 +193,7 @@
       <div class="col s12 m6 l3">
         <div class="funcionario__cardapio-add--card">
           <h3 class="funcionario__cardapio-add--card--title almocai-text text-vermelho">Quinta-Feira</h3>
-          <h5 class="funcionario__cardapio-add--card--data">01/10</h5>
+          <h5 class="funcionario__cardapio-add--card--data">03/10</h5>
           <ul class="funcionario__cardapio-add--lista">
             <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
             <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
@@ -223,6 +223,15 @@
         </div>
       </div>
 
+    </div>
+
+    <!-- Mensagem caso não haja cardápio -->
+    <div class="section container">
+      <div class="row">
+        <div class="cardapio__indisponivel card col s12 m6 offset-m3">
+          <h2 class="no-select">Nenhuma cardápio cadastrado para essa semana</h2>
+        </div>
+      </div>
     </div>
 
   </main>
