Interface - Criar cardápio
Página de adicionar cardápio adicinada e quase pronta para uso total.

--- a/Interface/funcionario/index.html
+++ b/Interface/funcionario/index.html
@@ -32,7 +32,7 @@
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect active" href="./"><i class="material-icons left">home</i>Página Inicial</a></li> 
-          <li><a class="waves-effect" href="cardapio/"><i class="material-icons left">menu_book</i>Cardápios</a></li>
+          <li><a class="waves-effect" href="cardapios/"><i class="material-icons left">menu_book</i>Cardápios</a></li>
           <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
         </ul>
       </div>
@@ -41,7 +41,7 @@
     <ul class="sidenav" id="mobile-sidenav">
       <li class="sidenav__logo"><img src="../assets/img/logo-verde.svg"></li>
       <li><a class="waves-effect active" href="./"><i class="material-icons left">home</i>Página Inicial</a></li> 
-      <li><a class="waves-effect" href="cardapio/"><i class="material-icons left">menu_book</i>Cardápio</a></li>
+      <li><a class="waves-effect" href="cardapios/"><i class="material-icons left">menu_book</i>Cardápio</a></li>
       <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </header>
