--- a/Interface/funcionario/cardapios/cardapio.html
+++ b/Interface/funcionario/cardapios/cardapio.html
@@ -5,13 +5,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Gerenciar cardápio - Almoçaí</title>
+  <title>Cardápio 30/09 até 03/10 - Almoçaí</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="../../../assets/img/icons/icon-128x128.png" />
+  <link rel="shortcut icon" href="../../assets/img/icons/icon-128x128.png" />
 
   <!-- Manifest -->
-  <link rel="manifest" href="../../../assets/pwa/manifest.json">
+  <link rel="manifest" href="../../assets/pwa/manifest.json">
 
   <!-- Fontes -->
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200,700" rel="stylesheet">
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- CSS -->
-  <link href="../../../assets/css/almocai.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../../assets/css/almocai.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
 <body>
@@ -28,21 +28,21 @@
 
     <nav class="navbar-transparent">
       <div class="nav-wrapper container">
-        <img class="no-select brand-logo" src="../../../assets/img/logo-branco.svg">
+        <img class="no-select brand-logo" src="../../assets/img/logo-branco.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a class="waves-effect" href="../../"><i class="material-icons left">home</i>Página Inicial</a></li> 
-          <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
-          <li><a class="waves-effect" href="../../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+          <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li> 
+          <li><a class="waves-effect" href="./"><i class="material-icons left">menu_book</i>Cardápios</a></li>
+          <li><a class="waves-effect" href="../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
         </ul>
       </div>
     </nav>
 
     <ul class="sidenav" id="mobile-sidenav">
-      <li class="sidenav__logo"><img src="../../../assets/img/logo-verde.svg"></li>
-      <li><a class="waves-effect" href="../../"><i class="material-icons left">home</i>Página Inicial</a></li> 
-      <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Gerenciar cardápio</a></li>
-      <li><a class="waves-effect" href="../../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+      <li class="sidenav__logo"><img src="../../assets/img/logo-verde.svg"></li>
+      <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li> 
+      <li><a class="waves-effect" href="./"><i class="material-icons left">menu_book</i>Cardápios</a></li>
+      <li><a class="waves-effect" href="../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </header>
 
@@ -51,7 +51,7 @@
     <div class="section banner valign-wrapper banner--8">
       <div class="row">
         <div class="col s12">
-          <h1 class="banner__titulo">Gerenciar cardápio</h1>
+          <h1 class="banner__titulo">Cardápio</h1>
           <h4 class="banner__subtitulo">30/09 até 03/10</h4>
         </div>
       </div>
@@ -160,12 +160,6 @@
         <div class="funcionario__cardapio-add--card">
           <h3 class="funcionario__cardapio-add--card--title almocai-text text-amarelo">Quarta-Feira</h3>
           <h5 class="funcionario__cardapio-add--card--data">02/10</h5>
-          <ul class="funcionario__cardapio-add--lista">
-            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-          </ul>
-          <div class="divider"></div>
           <h6 class="funcionario__cardapio-add--card--subtitle">Adicionar um alimento</h6>
           <div class="row">
             <div class="input-field col s12">
@@ -186,6 +180,12 @@
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
             </div>
           </div>
+          <div class="divider margin-top-small"></div>
+          <ul class="funcionario__cardapio-add--lista">
+            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+          </ul>
         </div>
       </div>
 
@@ -194,12 +194,6 @@
         <div class="funcionario__cardapio-add--card">
           <h3 class="funcionario__cardapio-add--card--title almocai-text text-vermelho">Quinta-Feira</h3>
           <h5 class="funcionario__cardapio-add--card--data">03/10</h5>
-          <ul class="funcionario__cardapio-add--lista">
-            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-          </ul>
-          <div class="divider"></div>
           <h6 class="funcionario__cardapio-add--card--subtitle">Adicionar um alimento</h6>
           <div class="row">
             <div class="input-field col s12">
@@ -220,6 +214,12 @@
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
             </div>
           </div>
+          <div class="divider margin-top-small"></div>
+          <ul class="funcionario__cardapio-add--lista">
+            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+          </ul>
         </div>
       </div>
 
@@ -239,7 +239,7 @@
     <div class="footer-copyright">
       <div class="container">
       © 2019 Almoçaí
-      <a class="right" href="../../../sobre">Sobre</a>
+      <a class="right" href="../../sobre">Sobre</a>
       </div>
     </div>
   </footer>
