--- a/Interface/funcionario/cardapios/index.html
+++ b/Interface/funcionario/cardapios/index.html
@@ -59,7 +59,7 @@
     <div class="row container margin-top-small">
       
       <!-- Adicionar um dia -->
-      <div class="col s12 m4 l4">
+      <div class="col s12 m4 l3 xl4">
         <div class="funcionario__semana">
           <h5 class="funcionario__semana--title">Adicionar uma semana</h5>
           <div class="row">
@@ -74,12 +74,12 @@
         </div>
       </div>
 
-      <div class="col s12 m4 l2">
+      <div class="col s12 m4 l3 xl2">
         <div class="funcionario__semana green-gradient">
           <h5 class="funcionario__semana--data almocai-text text-branco">30/09</h5>
           <h5 class="funcionario__semana--subdata almocai-text text-branco">até 03/10</h5>  
           <div class="col s12 center">
-            <a href="gerenciar/" class="waves-effect waves-light btn adm__inserir--btn almocai branco almocai-text bold" style="margin: 0;">Acessar</a>              
+            <a href="cardapio.html" class="waves-effect waves-light btn adm__inserir--btn almocai branco almocai-text bold" style="margin: 0;">Acessar</a>
           </div>  
         </div>
       </div>
