Interface - Gerenciar Cardápios
Alterado o padrão dos cartões para adicionar primeiro e mostrar depois.

--- a/Interface/funcionario/cardapios/cardapio.html
+++ b/Interface/funcionario/cardapios/cardapio.html
@@ -85,19 +85,13 @@
       </div>
     </div>
 
-    <div class="row container margin-top-small">
+    <div class="row container margin-top-tiny">
       
       <!-- Segunda Feira -->
       <div class="col s12 m6 l3">
         <div class="funcionario__cardapio-add--card">
           <h3 class="funcionario__cardapio-add--card--title">Segunda-Feira</h3>
           <h5 class="funcionario__cardapio-add--card--data">30/09</h5>
-          <ul class="funcionario__cardapio-add--lista">
-            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-          </ul>
-          <div class="divider"></div>
           <h6 class="funcionario__cardapio-add--card--subtitle">Adicionar um alimento</h6>
           <div class="row">
             <div class="input-field col s12">
@@ -118,6 +112,12 @@
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
             </div>
           </div>
+          <div class="divider margin-top-small"></div>
+          <ul class="funcionario__cardapio-add--lista">
+            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+          </ul>
         </div>
       </div>
 
@@ -126,12 +126,6 @@
         <div class="funcionario__cardapio-add--card">
           <h3 class="funcionario__cardapio-add--card--title almocai-text text-azul">Terça-Feira</h3>
           <h5 class="funcionario__cardapio-add--card--data">01/10</h5>
-          <ul class="funcionario__cardapio-add--lista">
-            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
-          </ul>
-          <div class="divider"></div>
           <h6 class="funcionario__cardapio-add--card--subtitle">Adicionar um alimento</h6>
           <div class="row">
             <div class="input-field col s12">
@@ -152,6 +146,12 @@
               <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" style="margin: 0;">Adicionar</button>              
             </div>
           </div>
+          <div class="divider margin-top-small"></div>
+          <ul class="funcionario__cardapio-add--lista">
+            <li>Feijão<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Arroz<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+            <li>Batata<a href="#" class="right"><i class="material-icons adm__tabela--excluir">delete</i></a></li>
+          </ul>
         </div>
       </div>
 
