--- a/Interface/funcionario/cardapios/index.html
+++ b/Interface/funcionario/cardapios/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Gerenciar cardápio - Almoçaí</title>
+  <title>live-Cardápios - Almoçaí</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="../../assets/img/icons/icon-128x128.png" />
