Atualização interface cadastro de cardápio

--- a/componentes/nav-funcionario-trp.html
+++ b/componentes/nav-funcionario-trp.html
@@ -7,12 +7,8 @@
         Página inicial
         <i class="material-icons right">home</i>
       </a></li>
-      <li><a class="waves-effect" href="cardapio/criar">
-        Criar cardápio
-        <i class="material-icons right">menu_book</i>
-      </a></li>
-      <li><a class="waves-effect" href="cardapio/gerenciar">
-        Gerenciar cardápio
+      <li><a class="waves-effect" href="{root_path}funcionario/cardapios">
+        Cardápios
         <i class="material-icons right">menu_book</i>
       </a></li>
       <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
@@ -26,12 +22,8 @@
     Página inicial
     <i class="material-icons right">home</i>
   </a></li>
-  <li><a class="waves-effect" href="cardapio/criar">
+  <li><a class="waves-effect" href="{root_path}funcionario/cardapios">
     Criar cardápio
-    <i class="material-icons right">menu_book</i>
-  </a></li>
-  <li><a class="waves-effect" href="cardapio/gerenciar">
-    Gerenciar cardápio
     <i class="material-icons right">menu_book</i>
   </a></li>
   <li><a class="waves-effect" href="{root_path}entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
