--- a/funcionario/cardapios/cartao_semana.html
+++ b/funcionario/cardapios/cartao_semana.html
@@ -3,7 +3,7 @@
 		<h5 class="funcionario__semana--data almocai-text text-branco">{data_inicio}</h5>
 		<h5 class="funcionario__semana--subdata almocai-text text-branco">até {data_fim}</h5>
 		<div class="col s12 center">
-			<a href="{root_path}cardapio/?cod={semana_cod}"
+			<a href="{root_path}funcionario/cardapio/?cod={semana_cod}"
 				class="waves-effect waves-light btn adm__inserir--btn almocai branco almocai-text bold"
 				style="margin: 0;">Acessar</a>
 		</div>
