--- a/Interface/administrador/index.html
+++ b/Interface/administrador/index.html
@@ -57,7 +57,7 @@
 
     <div class="section row container">
       <!-- Gerenciar alunos -->
-      <div class="col s12 m4">
+      <div class="col s12 m6 l4 offset-l2">
         <a href="alunos/">
           <div class="adm__card card hoverable">
             <p>
@@ -69,25 +69,13 @@
       </div>
 
       <!-- Gerenciar funcionarios -->
-      <div class="col s12 m4">
+      <div class="col s12 m6 l4">
         <a href="funcionarios/">
           <div class="adm__card card hoverable">
             <p>
               <i class="material-icons adm__card--icone almocai-text text-azul">perm_identity</i>
             </p>
             <h6 class="adm__card--titulo almocai-text text-azul">Gerenciar funcionarios</h6>
-          </div>
-        </a>
-      </div>
-
-      <!-- Gerenciar nutricionistas -->
-      <div class="col s12 m4">
-        <a href="nutricionistas/">
-          <div class="adm__card card hoverable">
-            <p>
-              <i class="material-icons adm__card--icone almocai-text text-amarelo">local_dining</i>
-            </p>
-            <h6 class="adm__card--titulo almocai-text text-amarelo">Gerenciar nutricionistas</h6>
           </div>
         </a>
       </div>
