--- a/Interface/aluno/cardapio/index.html
+++ b/Interface/aluno/cardapio/index.html
@@ -241,9 +241,14 @@
     </div>
 
   </main>
-
-  <footer>
-    <!-- Apenas a parte de "copyright" -->
+  
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container">
+      © 2019 Almoçaí
+      <a class="right" href="../../sobre/">Sobre</a>
+      </div>
+    </div>
   </footer>
 
   <!-- JS -->
