StatementBuilder implementado em todos os métodos dos DAOs

--- a/aluno/cartao_presenca.html
+++ b/aluno/cartao_presenca.html
@@ -17,7 +17,7 @@
 				</button>
 			</div>
 			<input type="hidden" name="dia_cod" id="dia_cod" value="{dia_cod}">
-			<input type="hidden" name="redir" id="redit" value="index">
+			<input type="hidden" name="redir" id="redir" value="index">
 		</form>
 		
 		{{cartao_presenca_selecionada}}
