--- a/funcionario/cardapio/item.html
+++ b/funcionario/cardapio/item.html
@@ -1,4 +1,7 @@
-<li>
-  {nome}<a href="acao.php?acao=DeletarAlimento&cod={codigo}" class="right"><i
-      class="material-icons adm__tabela--excluir">delete</i></a>
+<li class="collection-item">
+  <a href="acao.php?acao=DeletarAlimento&cod={codigo}&semana_cod={semana_codigo}" class="right secondary-content">
+    <i class="material-icons adm__tabela--excluir">delete</i>
+  </a>
+  
+  {nome}
 </li>
