--- a/funcionario/cardapios/cartao_semana.html
+++ b/funcionario/cardapios/cartao_semana.html
@@ -1,5 +1,5 @@
 <div class="col s12 m4 l3 xl2">
-	<div class="funcionario__semana green-gradient">
+	<div class="funcionario__semana {cor}">
 		<h5 class="funcionario__semana--data almocai-text text-branco">{data_inicio}</h5>
 		<h5 class="funcionario__semana--subdata almocai-text text-branco">até {data_fim}</h5>
 		<div class="col s12 center">
