--- a/funcionario/cardapios/main.html
+++ b/funcionario/cardapios/main.html
@@ -9,24 +9,25 @@
 <div class="row container margin-top-small">
 
 	<!-- Adicionar um dia -->
-	<div class="col s12 m4 l3 xl4">
-		<div class="funcionario__semana">
-			<h5 class="funcionario__semana--title">Adicionar uma semana</h5>
-			<form class="row" method="POST" action="acao.php">
-				<div class="input-field col s12">
-					<input type="text" name="data_inicio" id="data_inicio" class="datepicker" maxlength="10"
-						onkeypress="mascaraData(this)">
-					<label for="data_inicio">Data inicial</label>
-				</div>
-				<div class="col s12 center">
-					<button name="acao" id="acao" value="CriarCardapio"
-						class="waves-effect waves-light btn adm__inserir--btn almocai bold"
-						style="margin: 0;">Adicionar</button>
-				</div>
-			</form>
+	<div class="row">
+		<div class="col s12 m4 l3 xl4">
+			<div class="funcionario__semana">
+				<h5 class="funcionario__semana--title">Adicionar uma semana</h5>
+				<form class="row" method="POST" action="acao.php">
+					<div class="input-field col s12">
+						<input type="text" name="data_inicio" id="data_inicio" class="datepicker" maxlength="10"
+							onkeypress="mascaraData(this)">
+						<label for="data_inicio">Data inicial</label>
+					</div>
+					<div class="col s12 center">
+						<button name="acao" id="acao" value="CriarCardapio"
+							class="waves-effect waves-light btn adm__inserir--btn almocai bold"
+							style="margin: 0;">Adicionar</button>
+					</div>
+				</form>
+			</div>
 		</div>
+		{{cartoes_semanas}}
 	</div>
-
-	{{cartoes_semanas}}
-
+	{{erro}}
 </div>
