--- a/funcionario/cardapio/add_alimento_semana.html
+++ b/funcionario/cardapio/add_alimento_semana.html
@@ -9,7 +9,7 @@
         <input type="hidden" name="semana_cod" id="semana_cod" value="{semana_cod}" />
 
         <div class="input-field col s12 m12 l6">
-          <input id="nome" name="nome" type="text" />
+          <input id="nome" name="nome" type="text" required />
           <label for="nome">Alimento</label>
         </div>
 
