--- a/funcionario/cardapio/item.html
+++ b/funcionario/cardapio/item.html
@@ -1,6 +1,12 @@
 <li class="collection-item">
-  <a href="acao.php?acao=DeletarAlimento&cod={codigo}&semana_cod={semana_codigo}" class="right secondary-content">
-    <i class="material-icons adm__tabela--excluir">delete</i>
+  <a
+    class="right secondary-content tooltipped"
+    data-tooltip="Remover alimento"
+    href="acao.php?acao=DeletarAlimento&cod={codigo}&semana_cod={semana_codigo}"
+  >
+    <i class="material-icons adm__tabela--excluir">
+      delete
+    </i>
   </a>
   
   {nome}
