--- a/Interface/aluno/index.html
+++ b/Interface/aluno/index.html
@@ -116,7 +116,7 @@
     <div class="footer-copyright">
       <div class="container">
       © 2019 Almoçaí
-      <a class="right" href="">Sobre</a>
+      <a class="right" href="../sobre/">Sobre</a>
       </div>
     </div>
   </footer>
