--- a/Interface/administrador/alunos/index.html
+++ b/Interface/administrador/alunos/index.html
@@ -99,7 +99,7 @@
           
           <div class="divider"></div>
 
-          <table class="striped highlight centered responsive-table">
+          <table class="highlight centered responsive-table">
             <thead>
               <tr>
                   <th>Matricula</th>
