--- a/aluno/perfil/frequencia_cartao.html
+++ b/aluno/perfil/frequencia_cartao.html
@@ -1,9 +1,15 @@
 <div class="row">
-	<div class="col s12 almocai">
+	<div class="card-panel col s12 almocai">
 
 		<h5 class="white-text">Frequência alterada com sucesso</h5>
 
-		<h6>{mensagem}</h6>
+		<div class="row">
+			<div class="card-panel col s12 almocai amarelo">
+				<h5>Aviso</h5>
+
+				<p>{mensagem}</p>
+			</div>
+		</div>
 
 	</div>
 </div>
