--- a/administrador/componentes/listagem_usuarios.html
+++ b/administrador/componentes/listagem_usuarios.html
@@ -16,7 +16,8 @@
     <table class="highlight centered responsive-table">
       <thead>
         <tr>
-          <th>Matricula</th>
+          <th>ID</th>
+          <th>Username</th>
           <th>Nome</th>
           <th>Alterar</th>
           <th>Excluir</th>
