--- a/aluno/perfil/main.html
+++ b/aluno/perfil/main.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col s12">
       <h1 class="banner__titulo">{nome}</h1>
-      <h4 class="banner__subtitulo">{matricula}</h4>
+      <h4 class="banner__subtitulo">{username}</h4>
     </div>
   </div>
 </div>
