--- a/entrar/main.html
+++ b/entrar/main.html
@@ -16,8 +16,8 @@
 
         <div class="row">
           <div class="input-field col s12 l6 offset-l2">
-            <input id="matricula" type="text" name="matricula" />
-            <label for="matricula">Matricula</label>
+            <input id="username" type="text" name="username" />
+            <label for="username">Nome de usuário</label>
           </div>
         </div>
         <div class="row">
