--- a/funcionario/cardapio/main.html
+++ b/funcionario/cardapio/main.html
@@ -8,12 +8,16 @@
     </div>
   </div>
 
-  <!-- Adicionar alimentos para todos os dias da semana -->
-  {{ add_alimento_semana }}
-
-  <div class="row container margin-top-small">
+  <div class="container margin-top-small">
     <!-- Dias da semana (listagem, exclusão e cadastro de alimentos) -->
-    {{ dias }}
+    <div class="row">
+      {{ dias }}
+    </div>
+
+    <!-- Adicionar alimentos para todos os dias da semana -->
+    <div class="row">
+      {{ add_alimento_semana }}
+    </div>
   </div>
 
 </main>
