--- a/aluno/perfil/cartao_alt_senha.html
+++ b/aluno/perfil/cartao_alt_senha.html
@@ -5,14 +5,14 @@
       <div class="row">
         <div class="col s12">
           <div class="input-field col s12">
-            <input id="senhaNova" type="password" name="senhaNova">
+            <input id="senhaNova" type="password" name="senhaNova" required />
             <label for="senhaNova">Senha nova</label>
           </div>
         </div>
         <div class="col s12">
           <div class="input-field col s12">
             <!-- Adicionar sistema de verificação de senha -->
-            <input id="senhaAntiga" type="password" name="senhaAntiga">
+            <input id="senhaAntiga" type="password" name="senhaAntiga" required />
             <label for="senhaAntiga">Senha antiga</label>
           </div>
         </div>
