--- a/aluno/perfil/frequenciaAlterada_cartao.html
+++ b/aluno/perfil/frequenciaAlterada_cartao.html
@@ -4,7 +4,7 @@
 		<h5 class="white-text">Frequência alterada com sucesso</h5>
 
 		<div class="row">
-			<div class="card-panel col s12 almocai amarelo">
+			<div class="card-panel col s12 almocai amarelo white-text">
 				<h5>Aviso</h5>
 
 				<p>{mensagem}</p>
