--- a/administrador/componentes/linha_usuario.html
+++ b/administrador/componentes/linha_usuario.html
@@ -16,15 +16,15 @@
           <input type="hidden" name="tipo" value="{tipo}" />
 
           <div class="input-field col s12">
-            <input id="nome" name="nome" type="text" value="{nome}">
+            <input id="nome" name="nome" type="text" value="{nome}" required maxlength="255">
             <label for="nome">Nome</label>
           </div>
           <div class="input-field col s12">
-            <input id="username" name="username" type="text" value="{username}">
+            <input id="username" name="username" type="text" value="{username}" required maxlength="100">
             <label for="username">Username</label>
           </div>
           <div class="input-field col s12">
-            <input id="senha" name="senha" type="password" placeholder="Senha (deixe vazia para não alterar)">
+            <input required id="senha" name="senha" type="password" placeholder="Senha (deixe vazia para não alterar)">
             <label for="senha">Senha</label>
           </div>
         </div>
