--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -4,10 +4,14 @@
       Você possui alguma intolerância/alergia alimentar?
     </h4>
     <div class="row">
-      <div class="col s12">
-        <h5 class="center-align">
+      <div class="col s12 center-align">
+        <h5>
           Entre em contato com a nutricionista do câmpus.
         </h5>
+
+        <p>
+          <b>E-mail:</b> nutricionista@mail.com
+        </p>
 
         <div class="divider" style="margin: 2rem 0 2rem 0"></div>
 
