--- a/funcionario/cardapio/add_alimento_semana.html
+++ b/funcionario/cardapio/add_alimento_semana.html
@@ -1,27 +1,36 @@
-<div class="col s12">
-  <div class="funcionario__cardapio-add">
-    <h4 class="funcionario__cardapio-add--title">
-      Adicionar um alimento em todos os dias
-    </h4>
+<div class="hide-on-small-only col m2 l4"></div>
 
-    <form class="row" method="POST" action="acao.php">
+<div class="col s12 m8 l4 center">
+  <div class="funcionario__cardapio-add">
+    <h5 class="funcionario__cardapio-add--title text-azul">
+      Adicionar em todos os dias
+    </h5>
+
+    <form method="POST" action="acao.php">
       <input type="hidden" name="semana_cod" id="semana_cod" value="{semana_cod}" />
 
-      <div class="input-field col s12 m12 l6">
-        <input id="nome" name="nome" type="text" required />
-        <label for="nome">Alimento</label>
-      </div>
+      <div class="row center-align">
+        <div class="input-field col s12">
+          <input id="nome" name="nome" type="text" required />
+          <label for="nome">Alimento</label>
+        </div>
 
-      <div class="input-field col s12 m8 l4">
-        {{ select_tipo }}
+        <div class="col s12">
+          <div class="col s12">
+          <button 
+            class="waves-effect waves-light btn azul almocai bold" type="submit" name="acao"
+            id="acao" value="AddAlimentoSemana"
+          >
+            <i class="material-icons left">add</i>
+            Adicionar
+          </button>
+        </div>
+        </div>
       </div>
-
-      <div class="col s12 m4 l2 center">
-        <button class="waves-effect waves-light btn adm__inserir--btn almocai bold" type="submit" name="acao"
-          id="acao" value="AddAlimentoSemana">
-          Adicionar
-        </button>
-      </div>
+      
     </form>
   </div>
 </div>
+
+<div class="hide-on-small-only col m2 l4"></div>
+
