--- a/funcionario/cardapios/main.html
+++ b/funcionario/cardapios/main.html
@@ -10,19 +10,24 @@
 
 	<!-- Adicionar um dia -->
 	<div class="row">
-		<div class="col s12 m4 l3 xl4">
+		<div class="col s12 m6 l4 xl3">
 			<div class="funcionario__semana">
-				<h5 class="funcionario__semana--title">Adicionar uma semana</h5>
+				<h5 class="funcionario__semana--title">Adicionar cardápio</h5>
 				<form class="row" method="POST" action="acao.php">
 					<div class="input-field col s12">
-						<input type="text" name="data_inicio" id="data_inicio" class="datepicker" maxlength="10"
+						<input type="text" name="data_inicio" id="data_inicio" class="datepicker" maxlength="10" required
 							onkeypress="mascaraData(this)">
-						<label for="data_inicio">Data inicial</label>
+						<label for="data_inicio">Data em que a semana começa</label>
 					</div>
 					<div class="col s12 center">
-						<button name="acao" id="acao" value="CriarCardapio"
+						<button
+							name="acao" id="acao" value="CriarCardapio"
 							class="waves-effect waves-light btn adm__inserir--btn almocai bold"
-							style="margin: 0;">Adicionar</button>
+							style="margin: 0;"
+						>
+							<i class="material-icons left">add</i>
+							Adicionar
+						</button>
 					</div>
 				</form>
 			</div>
