--- a/administrador/componentes/adicionar_usuario.html
+++ b/administrador/componentes/adicionar_usuario.html
@@ -16,6 +16,7 @@
         <div class="input-field col s12 m8">
           <input id="username" type="text" name="username" required />
           <label for="username">Username (login, por exemplo "fulano.silva")</label>
+          <span class="helper-text" data-error="nome utilizado" data-success=""></span>
         </div>
         
         <div class="input-field col s12 m4 adm__inserir--remove-margin">
