--- a/administrador/componentes/linha_usuario.html
+++ b/administrador/componentes/linha_usuario.html
@@ -2,6 +2,7 @@
   <td>{codigo}</td>
   <td>{username}</td>
   <td>{nome}</td>
+  <td>{email}</td>
 
   <!-- Alterar usuário -->
   <td><a href="#alterar{codigo}" class="modal-trigger"><i class="material-icons adm__tabela--alterar">edit</i></a></td>
