--- a/administrador/componentes/listagem_usuarios.html
+++ b/administrador/componentes/listagem_usuarios.html
@@ -19,6 +19,7 @@
           <th>ID</th>
           <th>Username</th>
           <th>Nome</th>
+          <th>E-mail</th>
           <th>Alterar</th>
           <th>Excluir</th>
         </tr>
