--- a/aluno/perfil/main.html
+++ b/aluno/perfil/main.html
@@ -9,6 +9,8 @@
 
 <div class="section container">
   <div class="row">
+
+    {{alerta_email}}
     
     <div class="col s12 m6 l4">
       <div class="row">
@@ -38,6 +40,9 @@
     <div class="col s12 m6 l4">
       <div class="row">
 
+          <!-- Cartão alterar e-mail -->
+          {{cartao_alt_email}}
+        
           <!-- Cartão alterar senha -->
           {{cartao_alt_senha}}
 
