--- a/administrador/componentes/adicionar_usuario.html
+++ b/administrador/componentes/adicionar_usuario.html
@@ -16,7 +16,7 @@
         <div class="input-field col s12 m8">
           <input id="username" type="text" name="username" maxlength="100" required />
           <label for="username">Username (login, por exemplo "fulano.silva")</label>
-          <span class="helper-text" data-error="nome utilizado" data-success=""></span>
+          <span class="helper-text" data-error="Username já em uso" data-success=""></span>
         </div>
         
         <div class="input-field col s12 m4 adm__inserir--remove-margin">
@@ -26,7 +26,7 @@
         
         <div class="col s12 m6 l2 center">          
           <button class="waves-effect waves-light btn adm__inserir--btn almocai {cor_btn} bold"
-          type="submit" name="acao" value="Insert">
+          type="submit" name="acao" value="Insert" id="adicionar">
             Adicionar</button>
         </div>
       </div>
