--- a/administrador/main.html
+++ b/administrador/main.html
@@ -32,3 +32,41 @@
     </a>
   </div>
 </div>
+
+<div class="container">
+  <div class="card-panel center-align">
+    
+    <div class="row">
+      <div class="col s12">
+        <h2 class="bold almocai-text">Acessar interface</h2>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col s12 m6" style="margin-bottom: 1rem;">
+        <a 
+          href="{root_path}aluno/"
+          class="btn-large waves-effect waves-light bold almocai"
+        >
+          <i class="material-icons left">person</i>
+          Aluno
+        </a>
+      </div>
+
+      
+
+      <div class="col s12 m6">
+        <a 
+          href="{root_path}funcionario/"
+          class="btn-large waves-effect waves-light bold almocai azul"
+        >
+          <i class="material-icons left">person</i>
+          Funcionário
+        </a>
+      </div>
+
+    </div>
+
+  </div>
+</div>
